# simple_postgres_compare

./: .env.template  README.md  pyproject.toml
notebooks/: compare_dict.json  compare_replica_to_local_env.ipynb  explore.ipynb
src/python/functions/: __init__.py  run_comparison_on_db_json.py  run_comparison_queries_and_return_target_dictionary.py
src/python/utils/: __init__.py  create_date_series.py  database_connect_and_queries.py  jupyter_helpers.py
src/sql/: compare_replica_local_to_prod.sql
